Fixed logo in menu tagline spacing

--- a/style.less
+++ b/style.less
@@ -465,7 +465,7 @@ body {
 			font-size: 12px;
 			font-style: italic;
 			margin: -10px 0 0;
-			padding: 0 15px 15px;
+			padding: 0 0 15px;
 		}
 	}
 }
